fix(ui): amount have Y scrollbar sometimes

--- a/src/ui/components/TransactionList/CancelAndSpeedUp/style.less
+++ b/src/ui/components/TransactionList/CancelAndSpeedUp/style.less
@@ -23,7 +23,7 @@
             justify-content: end;
             span.amount {
                 text-overflow: ellipsis;
-                overflow-x: hidden;
+                overflow: hidden;
                 width: 75%;
                 display: inline-block;
                 text-align: right;
